samples/_failures_safe/1761203559_c8e46e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40859742.c: In function ‘print_token’:
./samples/SAFE/__tmp_40859742.c:170:62: error: missing terminating " character
  170 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF", "IN
      |                                                              ^~~
./samples/SAFE/__tmp_40859742.c:170:9: error: expected expression at end of input
  170 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF", "IN
      |         ^~~~~~~~
./samples/SAFE/__tmp_40859742.c:170:9: error: expected declaration or statement at end of input
